<resources>
    <string name="app_name">My calculator</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiple">*</string>
    <string name="division">/</string>
    <string name="enter_second_value">Enter Second Value</string>
    <string name="enter_first_value">Enter First Value</string>
    <string name="tarik_presenting_calculator">tarik presenting calculator</string>
</resources>